--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body{
-    width: 1440px;
+    width: 100%;
     font-family: 'Red Hat Text';
     display: flex;
     justify-content: space-between;
@@ -10,16 +10,17 @@ body{
     background-image: url("../images/pattern-background-desktop.svg");
     background-repeat: no-repeat;
     box-shadow: 1px 2px 25px 7px #999999;
-    width: 72rem;
-    height: 38rem;
-    margin-left: 12rem;
-    margin-bottom: 2rem;
+    width: 80%;
+    height: 100%;
+    margin-left: 10%;
+    margin-bottom: 2%;
     justify-content: center;
 }
 #order-card{
     width: 25rem;
     height: 35rem;
-    margin-top: 1.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-color: white;
     box-shadow: 2px 2px 2px #999999;
     border-radius: 2rem;
@@ -43,7 +44,6 @@ body{
 }
 #container-plan{
     width: 50%;
-    margin-top: -0.3rem;
     text-align: left;
 }
 #container-plan p{
@@ -53,7 +53,6 @@ body{
 h1{
     color:hsl(223, 47%, 23%);
     font-weight: 900;
-    padding: 0rem;
 }
 p{
     padding: 0rem 1.5rem 0rem 1.5rem;
@@ -81,4 +80,27 @@ a{
     background-color: hsl(245, 75%, 52%);
     color: white;
     box-shadow: 0px 6px 15px -5px #000000;
+}
+
+@media (max-width: 375px){
+    body{
+        width: 100%;
+    }
+    #container{
+        width: 100%;
+        height: 50rem;
+        margin: 0rem;
+    }
+    #order-card{
+        width: 90%;
+        height: 35rem;
+        margin-top: 1.5rem;
+    }
+    #illustration-hero{
+        width: 100%;
+    }
+    #container-link{
+        margin-top: 1.5rem;
+        margin-left: 1rem;
+    }
 }
