--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,7 @@ p{
 }
 a{
     text-decoration: underline;
+    cursor: pointer;
 }
 .button{
     margin-top: 1rem;
@@ -73,8 +74,9 @@ a{
     height: 2rem;
     border-radius: 0.5rem;
     font-weight: 700;
-    font-family: 'Red Hat Text';
+    font-family: inherit;
     border: 0rem; 
+    cursor: pointer;
 }
 #payment{
     background-color: hsl(245, 75%, 52%);
